--- a/views/index.jade
+++ b/views/index.jade
@@ -7,14 +7,14 @@ html
     meta(name="description" content="Home Page of Keon Kim, Software Engineer!")
     meta(name="author" content="Keon Kim")
     link(href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700', rel='stylesheet', type='text/css')
-    link(rel="stylesheet" href="/css/jquery.terminal.css")
-    link(rel="stylesheet" href="/css/style.css")
+    link(rel="stylesheet" href="/css/jquery.terminal-1.10.1.css")
+
 
   body
 
-    script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src='/js/mousewheel-3.1.13.js', type='text/javascript')
-    script(src='/js/jquery.terminal-0.8.8.min.js', type='text/javascript')
+    script(src='/js/jquery.terminal-1.10.1.min.js', type='text/javascript')
     script(src="/js/script.js")
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
